--- a/.github/workflows/publish-npm.yml
+++ b/.github/workflows/publish-npm.yml
@@ -2,26 +2,20 @@ name: Publish NPM Package
 
 on:
   push:
-    branches: [ main ]
-    paths:
-      - 'annotations-server/**'
-  workflow_dispatch: # Allow manual triggering
+    tags:
+      - 'v*.*.*'  # Trigger only on version tags like v1.0.0, v1.2.3, etc.
+  workflow_dispatch: # Allow manual triggering from GitHub UI
 
 jobs:
   publish:
     runs-on: ubuntu-latest
     permissions:
-      contents: write  # Allow pushing commits and tags
+      contents: read
       id-token: write  # For NPM publishing
     
     steps:
     - name: Checkout code
       uses: actions/checkout@v4
-      with:
-        # Fetch full history for proper versioning
-        fetch-depth: 0
-        # Use GITHUB_TOKEN for checkout
-        token: ${{ secrets.GITHUB_TOKEN }}
 
     - name: Setup Node.js
       uses: actions/setup-node@v4
@@ -29,34 +23,28 @@ jobs:
         node-version: '18'
         registry-url: 'https://registry.npmjs.org'
 
-    - name: Configure Git
-      run: |
-        git config --global user.name 'github-actions[bot]'
-        git config --global user.email 'github-actions[bot]@users.noreply.github.com'
-
     - name: Install dependencies
       run: |
         cd annotations-server
-        npm install
+        npm ci  # Use npm ci for faster, more reliable installs in CI
 
-    - name: Get NPM version and publish
+    - name: Verify version matches tag
       run: |
         cd annotations-server
+        PACKAGE_VERSION=$(node -p "require('./package.json').version")
+        TAG_VERSION=${GITHUB_REF#refs/tags/v}  # Remove 'refs/tags/v' prefix
         
-        # Get latest published version from NPM
-        LATEST_NPM_VERSION=$(npm view pointa-server version 2>/dev/null || echo "0.1.0")
-        echo "Latest NPM version: $LATEST_NPM_VERSION"
+        echo "Package version: $PACKAGE_VERSION"
+        echo "Tag version: $TAG_VERSION"
         
-        # Set the package.json to the latest NPM version, then bump
-        npm version $LATEST_NPM_VERSION --no-git-tag-version
-        npm version patch --no-git-tag-version
-        
-        # Get the new version to publish
-        NEW_VERSION=$(node -p "require('./package.json').version")
-        echo "Publishing new version: $NEW_VERSION"
-        
-        # Publish to NPM
+        if [ "$PACKAGE_VERSION" != "$TAG_VERSION" ]; then
+          echo "Error: package.json version ($PACKAGE_VERSION) doesn't match tag ($TAG_VERSION)"
+          exit 1
+        fi
+
+    - name: Publish to NPM
+      run: |
+        cd annotations-server
         npm publish
-        
       env:
         NODE_AUTH_TOKEN: ${{ secrets.NPM_TOKEN }}
