--- a/annotations-server/package.json
+++ b/annotations-server/package.json
@@ -40,7 +40,8 @@
     "cors": "^2.8.5",
     "express": "^4.18.2",
     "multer": "^1.4.5-lts.1",
-    "node-persist": "^3.1.3"
+    "node-persist": "^3.1.3",
+    "ws": "^8.14.0"
   },
   "repository": {
     "type": "git",
