Rename @pointa/server-logger to pointa-server-logger for npm publish
- Change package name from scoped @pointa/server-logger to unscoped pointa-server-logger
- Update all references in README, source files, and extension code
- Update repository URLs to point to AmElmo/pointa
- Consistent naming with pointa-server package

--- a/server-logger/package.json
+++ b/server-logger/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "@pointa/server-logger",
+  "name": "pointa-server-logger",
   "version": "0.1.0",
   "description": "Capture backend server logs for Pointa bug reports",
   "main": "src/index.js",
@@ -17,7 +17,11 @@
   "license": "MIT",
   "repository": {
     "type": "git",
-    "url": "https://github.com/your-org/pointa"
+    "url": "https://github.com/AmElmo/pointa.git"
+  },
+  "homepage": "https://github.com/AmElmo/pointa/tree/main/server-logger",
+  "bugs": {
+    "url": "https://github.com/AmElmo/pointa/issues"
   },
   "engines": {
     "node": ">=16.0.0"
