--- a/server-logger/package.json
+++ b/server-logger/package.json
@@ -1,8 +1,9 @@
 {
   "name": "pointa-server-logger",
-  "version": "0.2.0",
+  "version": "0.2.2",
   "description": "Capture backend server logs for Pointa bug reports",
   "main": "src/index.js",
+  "types": "src/index.d.ts",
   "type": "module",
   "keywords": [
     "pointa",
