feat: add video recording MVP with click tracking
Implements Part 1 of the video annotation feature (POI-6):

New files:
- video-recorder.js: Core recording logic with tabCapture API, click tracking, and URL change detection
- video-recording-ui.js: Recording overlay with timer, pause/resume controls
- video-feedback-ui.js: Review modal with video playback and timeline

Modified files:
- manifest.json: Add tabCapture permission
- background.js: Add video capture message handlers
- sidebar-ui.js: Add "Record Video" option to issue type selector
- content.js: Add startVideoRecording/stopVideoRecording methods

Features:
- Screen + microphone recording via chrome.tabCapture API
- Click tracking with visual pulse feedback
- Page URL change tracking
- Pause/resume support
- 5-minute max duration with 4:30 warning
- Simple review modal with video playback and click list

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,7 +10,8 @@
     "storage",
     "tabs",
     "debugger",
-    "scripting"
+    "scripting",
+    "tabCapture"
   ],
   "icons": {
     "16": "assets/icons/pointa-icon16.png",
