--- a/annotations-server/package.json
+++ b/annotations-server/package.json
@@ -34,6 +34,7 @@
     "node": ">=18.0.0"
   },
   "dependencies": {
+    "@linear/sdk": "^21.0.0",
     "@modelcontextprotocol/sdk": "^1.0.0",
     "chalk": "^5.3.0",
     "commander": "^11.1.0",
