fix: improve video recording and add beforeunload warnings
Video Recording:
- Switch from tabCapture to getDisplayMedia for better compatibility
- Allow recording entire screen, window, or any tab (not just current)
- Remove tabCapture permission from manifest (no longer needed)

Page Reload Protection:
- Add beforeunload warning to video-recorder.js
- Add beforeunload warning to bug-recorder.js
- Add beforeunload warning to performance-recorder.js
- Users now see browser's native "Leave site?" dialog during recordings

Background Script:
- Simplify startVideoCapture/stopVideoCapture (now handled by content script)

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -10,8 +10,7 @@
     "storage",
     "tabs",
     "debugger",
-    "scripting",
-    "tabCapture"
+    "scripting"
   ],
   "icons": {
     "16": "assets/icons/pointa-icon16.png",
