--- a/annotations-server/package.json
+++ b/annotations-server/package.json
@@ -40,6 +40,7 @@
     "commander": "^11.1.0",
     "cors": "^2.8.5",
     "express": "^4.18.2",
+    "form-data": "^4.0.0",
     "multer": "^1.4.5-lts.1",
     "node-persist": "^3.1.3",
     "ws": "^8.14.0"
