fix(sidebar): implement Shadow DOM for complete CSS isolation
Use Shadow DOM to prevent host page styles from bleeding through the sidebar.
This provides true encapsulation where z-index and CSS specificity from the
host page cannot affect the extension's sidebar UI. The sidebar is now hosted
in an isolated shadow root with its own CSS scope, ensuring the UI always
appears on top of all page content.

--- a/extension/manifest.json
+++ b/extension/manifest.json
@@ -38,7 +38,8 @@
         "assets/icons/pointa-icon48.png",
         "assets/icons/pointa-icon32.png",
         "assets/icons/pointa-icon16.png",
-        "assets/icons/stars.png"
+        "assets/icons/stars.png",
+        "content/content.css"
       ],
       "matches": [
         "<all_urls>"
